limpieza de fotos

--- a/index.html
+++ b/index.html
@@ -160,21 +160,6 @@ language models</h1>
 </section>
 <!-- End paper abstract -->
 
-
-<!-- Image carousel -->
-<section class="section hero is-light">
-  <div class="hero-body">
-    <div class="container">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          AMIs Deployments
-        </h2>
-      </div>
-  </div>
-</div>
-</div>
-</section>
 <!-- End image carousel -->
 
 
@@ -185,42 +170,6 @@ language models</h1>
       <div class="column is-four-fifths">
         <h2 class="title is-3">Main Outcomes</h2>
         <div class="content has-text-justified">
-
-    <h1>Main Achievements of the STSM</h1>
-
-    <h2>Textual Data Extraction Tool for Lepidoptera</h2>
-    <p>
-        A novel tool was developed to automatically collect and process textual information about butterflies and moths, achieving high coverage for species, genera, and families across Europe and North America. The tool has been released as open-source and accesses websites where content is both reusable and citable.
-    </p>
-
-    <h2>Pipeline for Aggregation, Translation, and Summarization</h2>
-    <p>
-        A modular pipeline was created to aggregate, translate, and clean species descriptions using language models. This system guides a large language model (LLM) to generate species summaries of variable length by combining multiple text sources. It supports flexible summarization and improves the usability of unstructured data. Both open-sourced and paid LLMs can be used.
-    </p>
-
-    <h2>Text_to_traits: Trait Extraction and Structuring Script</h2>
-    <p>
-        A semi-supervised method was developed for extracting and completing structured trait databases from textual descriptions. This script uses general-purpose language models to infer traits such as size, color, and dimorphism. The resulting structured data can be stored in a table and used in lower-resource settings where text-based processing is limited.
-    </p>
-
-    <h2>Multimodal Baseline Implementation</h2>
-    <p>
-        A baseline for multimodal clustering was implemented using a pre-trained Vision Transformer (ViT)-based model. This framework allows the joint embedding of text and images and supports unsupervised clustering to evaluate how well known and novel species can be grouped. The repository is modular and designed for reproducibility.
-    </p>
-
-    <h2>Datasets Generated</h2>
-    <ul>
-        <li>A textual dataset containing species descriptions for UK moths.</li>
-        <li>A structured trait dataset derived from those descriptions.</li>
-    </ul>
-    <p>
-        Additionally, preliminary experiments have been launched for image-to-text training, aimed at generating species descriptions directly from images.
-    </p>
-
-    <h2>Scientific Output</h2>
-    <p>
-        A paper titled <em>"Moth texting: Creating textual datasets from taxonomical data for automatic insect monitoring"</em> has been submitted to the EcoDL 2025 conference, which is focused on machine learning for ecological data management. The article presents the full methodology, toolchain, and results obtained during the STSM.
-    </p>
 
         </div>
       </div>
@@ -245,7 +194,8 @@ language models</h1>
         <h2 class="title is-3">Acknowledgment and funding</h2>
         <div class="content has-text-justified">
           <p>
-           Insect AI Cost Action, University of Granada Mobility Programme, UK CEH, AgZero 
+           This publication is based upon work from COST action InsectAI CA22129, supported by COST (European Cooperation in Science and Technology)
+           The authors would also like to acknowledge the support from: University of Granada Mobility plans programme and UK Centre for Ecology and Hydrology 
           </p>
         </div>
       </div>
