--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="STSM - Multimodal approaches for improving unsupervised insect monitoring and discovery."/>
-  <meta property="og:description" content="STSM - Multimodal approaches for improving unsupervised insect monitoring and discovery."/>
+  <meta property="og:title" content="moth dataset paper"/>
+  <meta property="og:description" content="moth dataset paper."/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/image/example.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
