--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ language models</h1>
 
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Department of Computer Science and Artificial Intelligence,  CITIC-UGR (Research Center for Information and Communication Technologies), University of Granada, Spain<br>UK Centre for Ecology and Hydrology, United Kingdom<br>Corresponding author: bortiz@ugr.es</span>
+                    <span class="author-block">Department of Computer Science and Artificial Intelligence,  CITIC-UGR (Research Center for Information and Communication Technologies), University of Granada, Spain<br>UK Centre for Ecology and Hydrology, United Kingdom<br>
+                      *Corresponding author: bortiz@ugr.es</span>
 
                   </div>
 
