--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>STSM - Multimodal approaches for improving unsupervised insect monitoring and discovery.</title>
+  <title>Creating datasets of moth morphology and
+behaviour from textual sources with large
+language models.</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -98,7 +100,7 @@ language models</h1>
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/thebooort/ecodl2025-paper" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -108,7 +110,7 @@ language models</h1>
                 </span>
 
                   <span class="link-block">
-                    <a href="https://github.com/thebooort/stsm-bartolome-ortiz" target="_blank"
+                    <a href="https://github.com/thebooort/ecodl2025-paper/code" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -116,16 +118,15 @@ language models</h1>
                     <span>Paper Code</span>
                   </a>
                 </span>
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv (WIP)</span>
-                </a>
-              </span>
+                                  <span class="link-block">
+                    <a href="https://github.com/thebooort/Lepi-Scrapper" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Scrapper Code</span>
+                  </a>
+                </span>
             </div>
           </div>
         </div>
@@ -165,7 +166,7 @@ language models</h1>
 
 
 <!-- Paper abstract -->
-<section class="section hero is-light">
+{{/*  <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -176,7 +177,7 @@ language models</h1>
       </div>
     </div>
   </div>
-</section>
+</section>  */}}
 <!-- End paper abstract -->
 
 
