--- a/index.html
+++ b/index.html
@@ -166,18 +166,18 @@ language models</h1>
 
 
 <!-- Paper abstract -->
-{{/*  <section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Main Outcomes</h2>
-        <div class="content has-text-justified">
+<!--{{/*  <section class="section hero is-light">-->
+  <!--<div class="container is-max-desktop">-->
+    <!--<div class="columns is-centered has-text-centered">-->
+     <!-- <div class="column is-four-fifths">-->
+    <!--    <h2 class="title is-3">Main Outcomes</h2>-->
+    <!--    <div class="content has-text-justified">-->
 
-        </div>
-      </div>
-    </div>
-  </div>
-</section>  */}}
+  <!--      </div>-->
+ <!--     </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>  */}}-->
 <!-- End paper abstract -->
 
 
